ci(upstream): 支持使用 PAT 创建 PR 以应对权限限制
为解决 `GITHUB_TOKEN` 权限在部分组织策略下受限，导致 `upstream-check` 工作流无法创建 PR 的问题，引入了后备机制。

工作流现在将优先使用用户提供的细粒度访问令牌（`secrets.UPSTREAM_PR_TOKEN`）来创建 PR，若该 Secret 不存在，则回退至默认的 `github.token`。

这确保了工作流在更严格的安全环境下的可靠性，并同步更新了 `CI.md` 文档以说明相关配置。

--- a/.github/workflows/upstream-check.yml
+++ b/.github/workflows/upstream-check.yml
@@ -58,6 +58,8 @@ jobs:
         if: always()
         uses: peter-evans/create-pull-request@v6
         with:
+          # Prefer a dedicated PAT (fine-grained) when repo/org blocks PR creation via GITHUB_TOKEN.
+          token: ${{ secrets.UPSTREAM_PR_TOKEN || github.token }}
           commit-message: "chore: bump upstream"
           title: "chore: bump upstream"
           body: |
